# dRoute

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  README.md  config.txt  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  publish-pypi.yml  tests.yml
data/observations/streamflow /preprocessed/: Bow_at_Banff_distributed_streamflow_processed.csv
docs/: ROUTING_METHODS.md
examples/: bow_at_banff_config.txt  calibrate_routing.py  config.yaml  forcing_config.txt  optimize_routing.py  pytorch_routing.py  run_with_summa.py  synthetic_optimization_demo.py
include/dmc/: advanced_routing.hpp  bmi.hpp  kernels_enzyme.hpp  router.hpp  router_fixes.hpp  saint_venant_enzyme.hpp  saint_venant_router.hpp  unified_router.hpp
python/: __init__.py  bindings.cpp  test_routing_with_data.py
python/droute/: __init__.py
scripts/: download_data.py
src/: main.cpp
tests/: test_ad_backend_comparison.cpp  test_bmi.cpp  test_comprehensive.cpp  test_gradient_verification.cpp  test_gradients.cpp  test_single_reach.cpp
tests/python/: __init__.py  conftest.py  test_edge_cases.py  test_enzyme.py  test_gradients.py  test_import.py  test_network.py  test_router_config.py  test_routing.py
