[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "pydmc_route"
version = "0.5.0"
description = "Differentiable river routing library for hydrological modeling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "dMC-Route Authors"}
]
keywords = ["hydrology", "routing", "muskingum-cunge", "differentiable", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/your-org/dmc-route"
Documentation = "https://github.com/your-org/dmc-route#readme"
Repository = "https://github.com/your-org/dmc-route"

# Don't look for Python packages - this is a pure C++ extension built by setup.py
[tool.setuptools]
py-modules = []
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
